--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.22.0",
+    "use-react-router-breadcrumbs": "^4.0.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
