--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.18.1",
     "@tanstack/react-query-devtools": "^5.18.1",
+    "@types/react-image-gallery": "^1.2.4",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-image-gallery": "^1.3.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.22.0",
     "use-react-router-breadcrumbs": "^4.0.1",
